fixing comment cut off...

--- a/public/css/looksy.css
+++ b/public/css/looksy.css
@@ -523,10 +523,6 @@ ol li {
 .pick .reply .comment .text {
 	padding:0;
 	margin:0;
-	width: 112px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
 }
 
 .pick .reply .user {
